--- a/pages/M03微积分二.html
+++ b/pages/M03微积分二.html
@@ -262,6 +262,7 @@ pre[data-line] .line-highlight[data-end]:after {
     <body for="html-export">
       <div class="mume markdown-preview  ">
       <h1 align="center">&#x5FAE;&#x79EF;&#x5206;&#x4E8C;</h1>
+<div align="right">&#x6700;&#x8FD1;&#x66F4;&#x65B0;&#x65F6;&#x95F4;&#xFF1A;2023-08-07</div>
 <h2 class="mume-header" id="%E5%A4%9A%E5%85%83%E5%87%BD%E6%95%B0">&#x591A;&#x5143;&#x51FD;&#x6570;</h2>
 
 <p><strong>&#x6982;&#x5FF5;</strong>&#xFF1A;<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>Z</mi></mrow><annotation encoding="application/x-tex">Z</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.07153em;">Z</span></span></span></span>&#x662F;&#x5173;&#x4E8E;<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>x</mi><mtext>&#x3001;</mtext><mi>y</mi></mrow><annotation encoding="application/x-tex">x&#x3001;y</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8778em;vertical-align:-0.1944em;"></span><span class="mord mathnormal">x</span><span class="mord cjk_fallback">&#x3001;</span><span class="mord mathnormal" style="margin-right:0.03588em;">y</span></span></span></span>&#x7684;<strong>&#x4E0D;&#x6B62;&#x4E00;&#x4E2A;&#x672A;&#x77E5;&#x6570;</strong>&#x7684;&#x51FD;&#x6570;&#x3002;</p>
