--- a/pages/M04概率论与数理统计.html
+++ b/pages/M04概率论与数理统计.html
@@ -262,6 +262,7 @@ pre[data-line] .line-highlight[data-end]:after {
     <body for="html-export">
       <div class="mume markdown-preview  ">
       <h1 align="center">&#x6982;&#x7387;&#x8BBA;&#x4E0E;&#x6570;&#x7406;&#x7EDF;&#x8BA1;</h1>
+<div align="right">&#x6700;&#x8FD1;&#x66F4;&#x65B0;&#x65F6;&#x95F4;&#xFF1A;2023-08-07</div>
 <h2 class="mume-header" id="%E6%A6%82%E7%8E%87%E5%9F%BA%E7%A1%80">&#x6982;&#x7387;&#x57FA;&#x7840;</h2>
 
 <h3 class="mume-header" id="%E4%BA%8B%E4%BB%B6">&#x4E8B;&#x4EF6;</h3>
