--- a/pages/A02JavaScript.html
+++ b/pages/A02JavaScript.html
@@ -262,6 +262,7 @@ pre[data-line] .line-highlight[data-end]:after {
     <body for="html-export">
       <div class="mume markdown-preview  ">
       <h1 align="center">JavaScript</h1>
+<div align="right">&#x6700;&#x8FD1;&#x66F4;&#x65B0;&#x65F6;&#x95F4;&#xFF1A;2023-08-07</div>
 <h2 class="mume-header" id="%E4%BB%8B%E7%BB%8D">&#x4ECB;&#x7ECD;</h2>
 
 <table>
@@ -319,7 +320,7 @@ pre[data-line] .line-highlight[data-end]:after {
 </thead>
 <tbody>
 <tr>
-<td style="text-align:center">html&#x5185;&#x90E8;</td>
+<td style="text-align:center">html&#x5185;&#x90E8;&#xFF08;body&#x5C3E;&#x90E8;&#x5B50;&#x5143;&#x7D20;&#xFF09;</td>
 <td style="text-align:center"><code>&lt;script&gt; js&#x4EE3;&#x7801;&#x5757; &lt;/script&gt;</code></td>
 </tr>
 <tr>
