--- a/pages/A04AJAX&nodejs&webpack&Git.html
+++ b/pages/A04AJAX&nodejs&webpack&Git.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>A04AJAX&amp;nodejs%webpack&amp;Git</title>
+      <title>A04AJAX&amp;nodejs&amp;webpack&amp;Git</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
@@ -262,6 +262,7 @@ pre[data-line] .line-highlight[data-end]:after {
     <body for="html-export">
       <div class="mume markdown-preview  ">
       <h1 align="center">AJAX&amp;nodejs&amp;webpack&amp;Git</h1>
+<div align="right">&#x6700;&#x8FD1;&#x66F4;&#x65B0;&#x65F6;&#x95F4;&#xFF1A;2023-08-07</div>
 <h2 class="mume-header" id="%E4%BB%8B%E7%BB%8D">&#x4ECB;&#x7ECD;</h2>
 
 <table>
