--- a/pages/C04计算机网络.html
+++ b/pages/C04计算机网络.html
@@ -262,6 +262,7 @@ pre[data-line] .line-highlight[data-end]:after {
     <body for="html-export">
       <div class="mume markdown-preview  ">
       <h1 align="center">&#x8BA1;&#x7B97;&#x673A;&#x7F51;&#x7EDC;</h1>
+<div align="right">&#x6700;&#x8FD1;&#x66F4;&#x65B0;&#x65F6;&#x95F4;&#xFF1A;2023-08-07</div>
 <h2 class="mume-header" id="%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%BD%91%E7%BB%9C%E6%A6%82%E5%BF%B5">&#x8BA1;&#x7B97;&#x673A;&#x7F51;&#x7EDC;&#x6982;&#x5FF5;</h2>
 
 <p><strong>&#x8BA1;&#x7B97;&#x673A;&#x7F51;&#x7EDC;&#x6982;&#x5FF5;</strong>&#xFF1A;&#x5206;&#x6563;&#x7684;&#x5177;&#x6709;&#x72EC;&#x7ACB;&#x529F;&#x80FD;&#x7684;&#x8BA1;&#x7B97;&#x673A;&#x7CFB;&#x7EDF;&#xFF0C;&#x901A;&#x8FC7;<strong>&#x901A;&#x4FE1;&#x8BBE;&#x5907;</strong>&#x4E0E;<strong>&#x7EBF;&#x8DEF;</strong>&#x8FDE;&#x63A5;&#x8D77;&#x6765;&#xFF0C;&#x7531;&#x529F;&#x80FD;&#x5B8C;&#x5584;&#x7684;&#x8F6F;&#x4EF6;&#x5B9E;&#x73B0;<strong>&#x8D44;&#x6E90;&#x5171;&#x4EAB;</strong>&#x548C;<strong>&#x4FE1;&#x606F;&#x4F20;&#x9012;</strong>&#x7684;&#x7CFB;&#x7EDF;&#xFF0C;&#x662F;<strong>&#x4E92;&#x8FDE;&#x4E92;&#x901A;&#x7684;</strong>&#x3001;<strong>&#x81EA;&#x6CBB;&#x7684;</strong>&#x8BA1;&#x7B97;&#x673A;&#x96C6;&#x5408;&#x3002;</p>
@@ -2198,34 +2199,81 @@ pre[data-line] .line-highlight[data-end]:after {
 </li>
 </ol>
 <hr>
-<h4 class="mume-header" id="tcp%E7%89%B9%E6%80%A7%E8%AF%A6%E6%83%85">TCP&#x7279;&#x6027;&#x8BE6;&#x60C5;</h4>
+<h4 class="mume-header" id="tcp%E6%8B%A5%E5%A1%9E%E6%8E%A7%E5%88%B6">TCP&#x62E5;&#x585E;&#x63A7;&#x5236;</h4>
 
 <table>
 <thead>
 <tr>
-<th style="text-align:center">TCP&#x7279;&#x6027;</th>
+<th style="text-align:center">&#x7279;&#x6027;</th>
 <th style="text-align:center">&#x8BF4;&#x660E;</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:center">&#x6D41;&#x91CF;&#x63A7;&#x5236;</td>
-<td style="text-align:center">&#x62E5;&#x6709;&#x94FE;&#x8DEF;&#x5C42;&#x7A97;&#x53E3;&#x534F;&#x8BAE;&#x7684;&#x8D85;&#x65F6;&#x91CD;&#x4F20;&#x3001;&#x56DE;&#x590D;&#x786E;&#x8BA4;&#x3001;&#x7D2F;&#x8BA1;&#x786E;&#x8BA4;</td>
+<td style="text-align:center">&#x56DE;&#x590D;&#x786E;&#x8BA4;&#x3001;&#x7D2F;&#x8BA1;&#x786E;&#x8BA4;&#x3001;&#x8D85;&#x65F6;&#x91CD;&#x4F20;</td>
+<td style="text-align:center">&#x540C;&#x94FE;&#x8DEF;&#x5C42;&#x7A97;&#x53E3;&#x534F;&#x8BAE;</td>
 </tr>
 <tr>
-<td style="text-align:center">&#x5FEB;&#x901F;&#x91CD;&#x4F20;&#x3001;&#x5197;&#x4F59;&#x786E;&#x8BA4;</td>
+<td style="text-align:center">&#x5FEB;&#x901F;&#x91CD;&#x4F20;</td>
 <td style="text-align:center">&#x6536;&#x5230;<strong>3&#x4E2A;&#x91CD;&#x590D;&#x786E;&#x8BA4;</strong>&#xFF0C;&#x5219;&#x8BA4;&#x4E3A;&#x8BE5;&#x671F;&#x5F85;&#x62A5;&#x6587;&#x6BB5;&#x4E22;&#x5931;&#xFF0C;&#x9A6C;&#x4E0A;&#x91CD;&#x4F20;</td>
 </tr>
 <tr>
 <td style="text-align:center">&#x7A97;&#x53E3;&#x67E5;&#x8BE2;</td>
 <td style="text-align:center">&#x5F53;&#x53D1;&#x9001;&#x65B9;&#x7A97;&#x53E3;&#x8BBE;&#x7F6E;&#x8BA1;&#x7B97;&#x4E3A;0&#x65F6;&#xFF0C;&#x5B9A;&#x671F;&#x4E3B;&#x52A8;&#x8BE2;&#x95EE;&#x662F;&#x5426;&#x6709;&#x7A97;&#x53E3;</td>
 </tr>
+</tbody>
+</table>
+<table>
+<thead>
 <tr>
-<td style="text-align:center">&#x62E5;&#x585E;&#x63A7;&#x5236;</td>
-<td style="text-align:center">&#x6162;&#x5F00;&#x59CB;&#xFF08;&#x4ECE;0&#x5F00;&#x59CB;&#xFF09;&#xFF0C;&#x5FEB;&#x6062;&#x590D;&#xFF08;&#x62E5;&#x585E;&#x540E;&#x8BBE;&#x4E3A;&#x4E00;&#x534A;&#xFF0C;&#x4ECE;&#x4E00;&#x534A;&#x5F00;&#x59CB;&#xFF09;</td>
+<th style="text-align:center">&#x65F6;&#x673A;</th>
+<th style="text-align:center">&#x91C7;&#x7528;&#x7B97;&#x6CD5;</th>
+<th style="text-align:center">&#x7B97;&#x6CD5;&#x542B;&#x4E49;&#xFF1A;&#x8C03;&#x6574;&#x7684;&#x7A97;&#x53E3;&#x503C;</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:center">&#x521A;&#x5F00;&#x59CB;</td>
+<td style="text-align:center">&#x6162;&#x5F00;&#x59CB;</td>
+<td style="text-align:center">1</td>
+</tr>
+<tr>
+<td style="text-align:center">&#x8D85;&#x65F6;&#x91CD;&#x4F20;</td>
+<td style="text-align:center">&#x6162;&#x5F00;&#x59CB;</td>
+<td style="text-align:center">1</td>
+</tr>
+<tr>
+<td style="text-align:center">&#x5FEB;&#x901F;&#x91CD;&#x4F20;</td>
+<td style="text-align:center">&#x5FEB;&#x6062;&#x590D;</td>
+<td style="text-align:center">&#x91CD;&#x590D;&#x65F6;&#x7A97;&#x53E3;&#x6570;&#x7684;&#x4E00;&#x534A;&#xFF0C;&#x5373;&#x6162;&#x5F00;&#x59CB;&#x95E8;&#x9650;</td>
 </tr>
 </tbody>
 </table>
+<table>
+<thead>
+<tr>
+<th style="text-align:center">&#x4E24;&#x4E2A;&#x589E;&#x957F;&#x9636;&#x6BB5;</th>
+<th style="text-align:center">&#x91C7;&#x7528;&#x7B97;&#x6CD5;</th>
+<th style="text-align:center">&#x7B97;&#x6CD5;&#x542B;&#x4E49;&#xFF1A;&#x7A97;&#x53E3;&#x7684;&#x589E;&#x957F;&#x7387;</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:center">&#xFF1C;&#x6162;&#x5F00;&#x59CB;&#x95E8;&#x9650;</td>
+<td style="text-align:center">&#x7F51;&#x7EDC;&#x8BD5;&#x63A2;</td>
+<td style="text-align:center">&#xD7;2</td>
+</tr>
+<tr>
+<td style="text-align:center">&#x2265;&#x6162;&#x5F00;&#x59CB;&#x95E8;&#x9650;</td>
+<td style="text-align:center">&#x62E5;&#x585E;&#x907F;&#x514D;</td>
+<td style="text-align:center">+1</td>
+</tr>
+</tbody>
+</table>
+<ul>
+<li>&#x6162;&#x5F00;&#x59CB;&#x95E8;&#x9650;&#x521D;&#x59CB;&#x503C;16&#xFF0C;&#x540E;&#x7EED;&#x52A8;&#x6001;&#x8C03;&#x6574;&#x3002;&#x8C03;&#x6574;&#x65F6;&#x673A;&#x89E6;&#x53D1;&#x8D85;&#x65F6;&#x91CD;&#x4F20;&#x3001;&#x5FEB;&#x901F;&#x91CD;&#x4F20;&#x3002;&#x8C03;&#x6574;&#x503C;&#x4E3A;&#x5176;&#x7A97;&#x53E3;&#x7684;&#x4E00;&#x534A;&#x3002;</li>
+</ul>
+<img src="./images/2023-08-07-19-53-image.png">
 <hr>
 <h2 class="mume-header" id="%E5%BA%94%E7%94%A8%E5%B1%82">&#x5E94;&#x7528;&#x5C42;</h2>
 
