--- a/pages/M01线性代数.html
+++ b/pages/M01线性代数.html
@@ -262,6 +262,7 @@ pre[data-line] .line-highlight[data-end]:after {
     <body for="html-export">
       <div class="mume markdown-preview  ">
       <h1 align="center">&#x7EBF;&#x6027;&#x4EE3;&#x6570;</h1>
+<div align="right">&#x6700;&#x8FD1;&#x66F4;&#x65B0;&#x65F6;&#x95F4;&#xFF1A;2023-08-07</div>
 <h2 class="mume-header" id="%E8%A1%8C%E5%88%97%E5%BC%8F">&#x884C;&#x5217;&#x5F0F;</h2>
 
 <p><strong>&#x6982;&#x5FF5;</strong>&#xFF1A;&#x884C;&#x6570;&#x5217;&#x6570;&#x5FC5;&#x987B;&#x76F8;&#x7B49;&#xFF0C;<strong>&#x4E00;&#x4E2A;&#x884C;&#x5217;&#x5F0F;&#x53EF;&#x4EE5;&#x6C42;&#x51FA;&#x4E00;&#x4E2A;&#x503C;</strong>&#xFF0C;&#x884C;&#x5217;&#x5F0F;&#x8868;&#x793A;&#x65F6;&#x7528;<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi mathvariant="normal">&#x2223;</mi><mi>a</mi><mi mathvariant="normal">&#x2223;</mi></mrow><annotation encoding="application/x-tex">\vert a\vert</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">&#x2223;</span><span class="mord mathnormal">a</span><span class="mord">&#x2223;</span></span></span></span>&#x5305;&#x88F9;&#x5176;&#x5185;&#x90E8;&#x5143;&#x7D20;&#xFF0C;&#x6765;&#x6E90;&#x4E8E;&#x514B;&#x62C9;&#x59C6;&#x6CD5;&#x5219;&#x7684;&#x65B9;&#x7A0B;&#x6C42;&#x89E3;&#x3002;</p>
