--- a/pages/M02微积分一.html
+++ b/pages/M02微积分一.html
@@ -262,6 +262,7 @@ pre[data-line] .line-highlight[data-end]:after {
     <body for="html-export">
       <div class="mume markdown-preview  ">
       <h1 align="center">&#x5FAE;&#x79EF;&#x5206;&#x4E00;</h1>
+<div align="right">&#x6700;&#x8FD1;&#x66F4;&#x65B0;&#x65F6;&#x95F4;&#xFF1A;2023-08-07</div>
 <h2 class="mume-header" id="%E9%9B%86%E5%90%88">&#x96C6;&#x5408;</h2>
 
 <table>
