--- a/pages/P01政治关键词.html
+++ b/pages/P01政治关键词.html
@@ -25,7 +25,7 @@
       <div class="crossnote markdown-preview  ">
       
 <h1 align="center">政治关键词</h1>
-<div align="right">最近更新时间：2023-12-9</div>
+<div align="right">最近更新时间：2023-12-17</div>
 <h2 id="马原">马原 </h2>
 <h3 id="马原创立发展">马原创立发展 </h3>
 <ul>
@@ -51,13 +51,19 @@
 <p>科学性、革命性</p>
 </li>
 <li>
-<p>革命性：人民性（本质属性）、实践性（首要和基本观点）、发展性（与时俱进）</p>
+<p>革命性：人民性（本质属性）、实践性（首要和基本观点、区别点）、发展性（与时俱进）</p>
 </li>
 <li>
 <p>根本价值目标：人自由而全面的发展</p>
 </li>
 <li>
+<p>人发展的最根本是：人自由程度提高</p>
+</li>
+<li>
 <p>对其他权利观的根本区别：强调社会的物质生活条件对权利的制约和决定作用</p>
+</li>
+<li>
+<p>权利以义务为条件、义务以权利为依据</p>
 </li>
 </ul>
 <h3 id="马原著作">马原著作 </h3>
@@ -66,13 +72,16 @@
 <p>《关于费尔巴哈的提纲》（马）：天才萌芽的第一个文件、实践观点</p>
 </li>
 <li>
+<p>《德法年鉴》（马恩）：唯心向唯物，革命主义向共产主义完成转变</p>
+</li>
+<li>
 <p>《资本论》（马）：工人阶级的《圣经》</p>
 </li>
 <li>
 <p>《法兰西内战》（马）：巴黎公社历史教训，规定社会公仆：选举撤换、工资低老练</p>
 </li>
 <li>
-<p>《哥达纲领批判》（马）：国际共产主义的纲领性文献</p>
+<p>《哥达纲领批判》（马）：国际共产主义的纲领性文献，进一步丰富科学社会主义</p>
 </li>
 <li>
 <p>《神圣家族》（马恩）：第一部合著、批判黑格尔唯心主义。论述历史唯物主义</p>
@@ -93,27 +102,6 @@
 <p>《唯物主义与经验批判主义》（列）：生活、实践，认识论首要和基本观点</p>
 </li>
 </ul>
-<h3 id="马原中国化">马原中国化 </h3>
-<ul>
-<li>
-<p>两个结合：中国实际、中国优秀传统文化</p>
-</li>
-<li>
-<p>提出：六届六中</p>
-</li>
-<li>
-<p>写入党章：七大</p>
-</li>
-<li>
-<p>第一次飞跃：毛泽东思想(思想渊源)</p>
-</li>
-<li>
-<p>中国化新飞跃：邓小平、三个代表、科学发展观</p>
-</li>
-<li>
-<p>中国化时代化新飞跃：习近平新时代中国特色社会主义思想</p>
-</li>
-</ul>
 <h3 id="唯物辩证法">唯物辩证法 </h3>
 <ul>
 <li>
@@ -131,11 +119,17 @@
 <li>
 <p>马克思主义、辩证唯物主义：唯物、运动、可知</p>
 </li>
+<li>
+<p>辩证唯物主义的最基本、最核心，马克思主义的基石：物质统一性原理</p>
+</li>
+<li>
+<p>唯物辩证法的实质和核心：对立统一规律</p>
+</li>
 </ul>
-<h3 id="物质和意识">物质和意识 </h3>
+<h4 id="物质和意识">物质和意识 </h4>
 <ul>
 <li>
-<p>物质特征：客观实在性、运动性、统一性</p>
+<p>物质特征：客观实在性、运动性(根本)、统一性</p>
 </li>
 <li>
 <p>意识特征：目的性、计划性、创造性</p>
@@ -144,7 +138,7 @@
 <p>人工智能：人理性性能的模拟、没有信念、意志、情感</p>
 </li>
 </ul>
-<h3 id="联系-发展和矛盾">联系、发展和矛盾 </h3>
+<h4 id="联系-发展和矛盾">联系、发展和矛盾 </h4>
 <ul>
 <li>
 <p>联系特征：客观性、普遍性、多样性、条件性</p>
@@ -155,8 +149,14 @@
 <li>
 <p>矛盾特征：斗争性(对立)、同一性(统一)、特殊性(个性)、普遍性(共性)、不平衡性(主次)</p>
 </li>
+<li>
+<p>认识世界和改造世界的根本动力、基本矛盾：主客观矛盾</p>
+</li>
+<li>
+<p>事物的性质决定于：主要矛盾</p>
+</li>
 </ul>
-<h3 id="实践和认识">实践和认识 </h3>
+<h4 id="实践和认识">实践和认识 </h4>
 <ul>
 <li>实践特征：客观实在性、主观能动性、社会历史性</li>
 </ul>
@@ -177,13 +177,22 @@
 <p>实践中介分类：物质性工具系统、语言符号工具系统</p>
 </li>
 <li>
+<p>实践客体：纳入实践主体实践活动范围的客观事物</p>
+</li>
+<li>
 <p>联系、两次飞跃：认识来源于实践，认识的目的是实践</p>
 </li>
 <li>
 <p>影响认识的因素：理性(指导、解释、预见)、非理性(激活、驱动、控制)</p>
 </li>
+<li>
+<p>真理和价值统一的基础：实践</p>
+</li>
+<li>
+<p>客观规律性和主观能动性统一的基础：实践</p>
+</li>
 </ul>
-<h3 id="真理">真理 </h3>
+<h4 id="真理">真理 </h4>
 <ul>
 <li>特征：客观性、一元性、绝对性、相对性</li>
 </ul>
@@ -238,6 +247,18 @@
 <p>四对矛盾、劳动二重性：具体抽象劳动、价值使用价值、商品货币、私人社会劳动(根源)</p>
 </li>
 <li>
+<p>具体劳动创造使用价值（不一定唯一）、抽象劳动创造价值（唯一源泉），</p>
+</li>
+<li>
+<p>商品转换成货币称为：商品的惊险的跳跃</p>
+</li>
+<li>
+<p>解决私人劳动和社会劳动的矛盾唯一途径：交换</p>
+</li>
+<li>
+<p>具体劳动能抽转为抽象劳动取决于：私人劳动和社会劳动能否统一</p>
+</li>
+<li>
 <p>理解政治经济学的枢纽：劳动二重性</p>
 </li>
 </ul>
@@ -271,6 +292,15 @@
 <p>判断社会主义的劳动是否具有生产性：是生产物质还是提供服务</p>
 </li>
 <li>
+<p>资本主义生产的绝对规律、唯一动机和直接目的：追求剩余价值</p>
+</li>
+<li>
+<p>追求剩余价值的结果：生产集中、资本集中</p>
+</li>
+<li>
+<p>剩余价值的生产过程，资本主义生产过程的主要方面：价值增值过程</p>
+</li>
+<li>
 <p>绝对剩余价值：加班</p>
 </li>
 <li>
@@ -278,6 +308,9 @@
 </li>
 <li>
 <p>资本积累内涵：剩余价值转化为资本</p>
+</li>
+<li>
+<p>资本积累的后果：社会失业根源、两极分化</p>
 </li>
 <li>
 <p>资本简单再生产：剩余价值用于消费、</p>
@@ -301,19 +334,34 @@
 <p>商品按生产价格出售而不是价值：并不违背价值规律，只是改变价值规律的实现形式，从个别部门看，平均利润与剩余价值不一致，从整体看，利润等于剩余价值</p>
 </li>
 <li>
+<p>价值规律的作用表现在：社会生产力发展、社会收入分配、生产资料和劳动力分配</p>
+</li>
+<li>
+<p>影响周转快慢的关键因素：周转时间、固定资产和流动资产构成</p>
+</li>
+<li>
+<p>资本积累规模大小：剥削程度、劳动生产率、所用资本所废资本、资本家预付资本</p>
+</li>
+<li>
 <p>相对过剩人口三种形式：流动、潜在、停滞</p>
 </li>
 <li>
 <p>资本循环三个阶段：购买阶段、生产阶段、售卖阶段</p>
 </li>
 <li>
-<p>经济危机强制解决：强制让供需平衡</p>
-</li>
-<li>
 <p>资本主义的基本矛盾、经济危机的根本原因：生产的无限扩大和劳动人民支付能力的相对缩小、企业内部生产有组织和社会生产无政府</p>
 </li>
 <li>
+<p>经济危机抽象的一般可能性：货币作为流通、支付手段所导致的</p>
+</li>
+<li>
 <p>经济危机的本质特征：生产相对过剩</p>
+</li>
+<li>
+<p>经济危机的根本原因：资本主义基本矛盾</p>
+</li>
+<li>
+<p>经济危机强制解决：强制让供需平衡</p>
 </li>
 <li>
 <p>资本主义政治制度的局限性：金钱操控下的民主、名义平等掩盖事实上不平等、政党恶斗效率低下、维护资产阶级统治</p>
@@ -346,9 +394,18 @@
 <li>
 <p>垄断围绕垄断价格上下波动、违反价格的自由波动、不违反价值规律</p>
 </li>
+<li>
+<p>垄断不能消除竞争原因：经济条件、依靠竞争、不能全生产</p>
+</li>
+<li>
+<p>垄断和竞争的目的区别：高额利润巩固统治(垄断)，超额利润资本积累(竞争)</p>
+</li>
 </ul>
 <h4 id="金融垄断">金融垄断 </h4>
 <ul>
+<li>
+<p>金融垄断形成和壮大的制度条件：金融自由化与金融创新</p>
+</li>
 <li>
 <p>金融资本内涵：工业垄断、银行垄断融合</p>
 </li>
@@ -425,6 +482,9 @@
 <p>科学社会主义的核心命题：社会主义必将取代资本主义</p>
 </li>
 <li>
+<p>社会主义必将取代资本主义决定于：资本主义内在矛盾</p>
+</li>
+<li>
 <p>科学社会主义的诞生：《共产党宣言》</p>
 </li>
 <li>
@@ -451,11 +511,17 @@
 <li>
 <p>社会主义发展道路多样性的原因：生产力差异(根本原因)、文化传统差异(重要条件)、时代和实践发展(现实原因)</p>
 </li>
+<li>
+<p>社会主义建设历史长期性原因：生产力发展、经济基础上层建设发展、国际环境、需长期认识探索</p>
+</li>
 </ul>
 <h3 id="共产主义">共产主义 </h3>
 <ul>
 <li>
 <p>基本特征：物质财富极大丰富、消费资料按需分配、社会高度和谐、人自由而全面发展(根本、现代化最终目标、马原价值目标)</p>
+</li>
+<li>
+<p>成为自然界的自觉的、真正的主人</p>
 </li>
 <li>
 <p>人类最美好的社会制度：共产主义</p>
@@ -465,10 +531,16 @@
 <h3 id="毛泽东思想">毛泽东思想 </h3>
 <ul>
 <li>
+<p>萌芽：大革命时期，新民主义革命基本思想的提出</p>
+</li>
+<li>
 <p>形成：农村包围城市、武装夺取政权</p>
 </li>
 <li>
 <p>成熟：七大</p>
+</li>
+<li>
+<p>七大：思想上毛泽东思想、政治上高举旗帜、组织上政治家集团</p>
 </li>
 <li>
 <p>内容：实事求是(根本观点、根本要求)、群众路线(生命线、工作路线)、独立自主</p>
@@ -479,29 +551,35 @@
 <li>
 <p>开启了<strong>独立自主</strong>解决中国革命实际问题的新阶段：遵义会议</p>
 </li>
+<li>
+<p>只革命、建设，不包括改革</p>
+</li>
 </ul>
 <h3 id="新民主主义革命理论">新民主主义革命理论 </h3>
 <ul>
 <li>
-<p>基本依据：认清国情</p>
+<p>中国革命的基本依据和基本前提：认清国情</p>
 </li>
 <li>
-<p>基本国情：半殖民半封建</p>
+<p>中国革命的基本国情：半殖民半封建</p>
 </li>
 <li>
 <p>中国革命的首要问题：分清敌我</p>
 </li>
 <li>
-<p>主要矛盾：帝国主义和中华民族(最主要)、封建主义和人民大众</p>
+<p>中国革命的基本问题：农民问题</p>
 </li>
 <li>
-<p>根本任务：推翻帝国主义(最主要)、封建主义、官僚主义</p>
+<p>中国革命的主要矛盾：帝国主义和中华民族(最主要)、封建主义和人民大众</p>
 </li>
 <li>
-<p>总路线提出：《中国革命和中国共产党》</p>
+<p>中国革命的根本任务：推翻帝国主义(最主要，首要)、封建主义、官僚主义</p>
 </li>
 <li>
-<p>总路线完整表述：《在晋绥干部会议上的讲话》</p>
+<p>新民主主义总路线提出：《中国革命和中国共产党》</p>
+</li>
+<li>
+<p>新民主主义总路线完整表述：《在晋绥干部会议上的讲话》</p>
 </li>
 <li>
 <p>中国革命的基本动力：无产阶级</p>
@@ -513,7 +591,7 @@
 <p>民族资产阶级的两面性：革命性和动摇性</p>
 </li>
 <li>
-<p>中国革命取得胜利的根本保障：无产阶级领导，中国共产党的领导</p>
+<p>中国革命取得胜利的根本保障、核心问题：无产阶级领导，中国共产党的领导</p>
 </li>
 <li>
 <p>实现领导权的关键：工农联盟为基础的统一战线</p>
@@ -539,6 +617,9 @@
 <li>
 <p>极具特色内容：保护民族工商业(原因：资产阶级性质、落后生产)</p>
 </li>
+<li>
+<p>新民主主义革命胜利标志着：彻底结束了旧中国一盘散沙的局面</p>
+</li>
 </ul>
 <h4 id="人民军队">人民军队 </h4>
 <ul>
@@ -561,13 +642,16 @@
 <h4 id="三大法宝">三大法宝 </h4>
 <ul>
 <li>
-<p>新民主主义三大法宝：统一战线、武装斗争、党的建设</p>
+<p>新民主主义三大法宝：统一战线、武装斗争（两个基本特点/武器）、党的建设</p>
 </li>
 <li>
 <p>统一战线：农民阶级、工人阶级、非劳动人民(原因：爱国、政治影响、经济技术)</p>
 </li>
 <li>
 <p>中国革命的主要形式：武装斗争</p>
+</li>
+<li>
+<p>中国革命的战略征地：农村革命根据地</p>
 </li>
 <li>
 <p>党建首位：政治建设</p>
@@ -633,7 +717,13 @@
 <p>开始摸索、摸索标志：《论十大关系》</p>
 </li>
 <li>
+<p>《论十大关系》基本方针：调动一切积极因素</p>
+</li>
+<li>
 <p>走有别于苏联的工业化道路：《关于正确处理人民内部矛盾的问题》</p>
+</li>
+<li>
+<p>矛盾是国家政治生活的主题根本着眼点：调动一切积极因素</p>
 </li>
 <li>
 <p>社会主义社会基本矛盾：非对抗性，又相适应(基本)，又相矛盾(非基本)</p>
@@ -657,7 +747,10 @@
 <p>民族之间：民族平等、团结互助</p>
 </li>
 <li>
-<p>八大：稳中求进、三大主体三大补充</p>
+<p>建国后第一次党章：八大</p>
+</li>
+<li>
+<p>八大：集中力量发展社会生产力、稳中求进、三大主体三大补充</p>
 </li>
 <li>
 <p>现代化战略目标：农业(根基)、工业、国防、科技强国</p>
@@ -684,22 +777,37 @@
 <h3 id="邓小平理论">邓小平理论 </h3>
 <ul>
 <li>
+<p>关于真理问题的大讨论：《实践是检验真理的唯一标准》</p>
+</li>
+<li>
+<p>标志着拨正反乱胜利完成：《关于建国以来党的若干历史问题的决议》</p>
+</li>
+<li>
 <p>《关于建国以来党的若干历史问题的决议》最核心原则：坚持和发展毛泽东思想</p>
 </li>
 <li>
-<p>社会主义提出：十二大</p>
+<p>十一届三中主题报告、改革开放宣言书：《解放思想、实事求是、团结一致向前看》</p>
 </li>
 <li>
-<p>邓小平理论形成：十三大，社会主义是什么，怎么做</p>
+<p>开启改革开放和社会主义现代化建设的新时期：十一届三中全会</p>
+</li>
+<li>
+<p>中国特色社会主义提出：十二大</p>
+</li>
+<li>
+<p>邓小平理论形成：十三大（系统阐述中国特色社会主义是什么，怎么做）</p>
 </li>
 <li>
 <p>邓小平理论写入党章：十五大</p>
 </li>
 <li>
-<p>第一次系统概括中国特色社会主义主要内容：十三大</p>
+<p>建设社会主义市场经济：十四大</p>
 </li>
 <li>
-<p>思想路线：解放思想、实事求是</p>
+<p>邓小平理论只改革、建设，不包括革命</p>
+</li>
+<li>
+<p>思想路线、精髓：解放思想、实事求是</p>
 </li>
 <li>
 <p>一个中心：经济建设为中心</p>
@@ -709,6 +817,9 @@
 </li>
 <li>
 <p>四项基本原则：坚持党领导、坚持社会主义道路、坚持马克思主义、坚持人民民主专政</p>
+</li>
+<li>
+<p>坚持中国特色社会主义的必由之路：改革开放、党的领导</p>
 </li>
 <li>
 <p>奋斗目标：富强、民主、文明社会主义现代化国家</p>
@@ -723,7 +834,7 @@
 <p>社会主义的目标：实现共同富裕</p>
 </li>
 <li>
-<p>鲜明特征：改革开放</p>
+<p>改革开放鲜明特征和首要任务：解放和发展生产力</p>
 </li>
 <li>
 <p>改革开放的出发点和落脚点：更好实现和维护人民利益、让老百姓过上好日子</p>
@@ -774,16 +885,40 @@
 <p>内容：发展是什么，怎么做</p>
 </li>
 <li>
+<p>第一要义：发展</p>
+</li>
+<li>
 <p>核心立场：以人为本</p>
 </li>
 <li>
 <p>基本要求：全面协调可持续</p>
 </li>
 <li>
+<p>根本方法：统筹兼顾</p>
+</li>
+<li>
 <p>最鲜明的精神实质：解放思想、事实求是、与时俱进、求真务实</p>
 </li>
 </ul>
 <h2 id="习近平">习近平 </h2>
+<ul>
+<li>中国特色社会主义进入新时代：十八大</li>
+</ul>
+<h3 id="两个结合">两个结合 </h3>
+<ul>
+<li>
+<p>两个结合：中国实际、中国优秀传统文化</p>
+</li>
+<li>
+<p>马原中国化提出：六届六中</p>
+</li>
+<li>
+<p>马原中国化写入党章：七大</p>
+</li>
+<li>
+<p>第一次结合：毛泽东思想</p>
+</li>
+</ul>
 <h3 id="科学体系">科学体系 </h3>
 <ul>
 <li>
@@ -906,6 +1041,9 @@
 <p>党和人民最显著的精神标志，创建伟业必由之路：团结奋斗</p>
 </li>
 <li>
+<p>新时代我国发展壮大的必由之路：新发展理念</p>
+</li>
+<li>
 <p>爱国主义教育法鲜明主题：全面建设社会主义现代化强国、实现中华民族伟大复兴</p>
 </li>
 <li>
@@ -994,10 +1132,16 @@
 <p>一贯要求和根本方针：党要管党、从严治党</p>
 </li>
 <li>
+<p>治本之策：加强纪律建设</p>
+</li>
+<li>
 <p>政治建设的首要任务：服从中央、统一领导</p>
 </li>
 <li>
 <p>政治生活的首要任务、前提：加强思想教育和理论武装</p>
+</li>
+<li>
+<p>新时代的党建：长期执政能力、先进性和纯洁性建设</p>
 </li>
 <li>
 <p>作风问题的核心：党同人民群众的关系问题</p>
@@ -1013,6 +1157,12 @@
 </li>
 <li>
 <p>跳出历史周期第二个答案，最大优势：自我革命</p>
+</li>
+<li>
+<p>自我革命的重要途径：四个自我</p>
+</li>
+<li>
+<p>各种监督的第一位、最根本：党内监督</p>
 </li>
 <li>
 <p>跳出历史周期第一个答案：民主、群众路线</p>
@@ -1038,7 +1188,10 @@
 <p>推进国家治理体系和治理能力现代化——鲜明指向和时代要求</p>
 </li>
 <li>
-<p>内在要求和基本目的：解放和增强社会活力</p>
+<p>改革的内在要求和基本目的：解放和增强社会活力</p>
+</li>
+<li>
+<p>改革开放的鲜明特征和首要目的：解放和发展社会生产力</p>
 </li>
 <li>
 <p>引领：总目标</p>
@@ -1083,8 +1236,24 @@
 <p>治国理政的基本方式：法治（道德不是基本方式，而是法治的支撑）</p>
 </li>
 <li>
-<p>四种权利保障：宪法保障、立法保障、行政保障、司法保障</p>
+<p>公民权利保障：宪法保障(前提基础)、立法保障(条件)、行政保障(关键)、司法保障(最后防线)</p>
 </li>
+<li>
+<p>法治同资本主义国家最大区别：坚持党的领导、党内法规体系的纳入</p>
+</li>
+<li>
+<p>法治道路的核心要义：党的领导、特色社会主义道路、特色社会主义法治理论</p>
+</li>
+<li>
+<p>法理至上体现：法律不可违反、普遍适用、优先适用</p>
+</li>
+<li>
+<p>法理不可违反：任何人违法都要受到惩罚</p>
+</li>
+<li>
+<p>法理强制性：区别于其他社会规范</p>
+</li>
+<li></li>
 </ul>
 <h4 id="法治体系">法治体系 </h4>
 <ul>
@@ -1268,6 +1437,9 @@
 <p>教育的根本尺度：人民满意</p>
 </li>
 <li>
+<p>科技三步走：二十大创新型国家行列，2035创新型国家前列，2050创新强国</p>
+</li>
+<li>
 <p>国家强身之基、安全之要：科技自立自强</p>
 </li>
 <li>
@@ -1278,6 +1450,9 @@
 </li>
 <li>
 <p>科技创新的源头：基础研究</p>
+</li>
+<li>
+<p>攀登世界科技高峰必由之路：自主创新</p>
 </li>
 <li>
 <p>世界科技强国竞争的着力点：国家战略科技力量</p>
@@ -1347,6 +1522,15 @@
 </li>
 <li>
 <p>决定社会主义文化事业前途命运的关键：坚持为人民服务、为社会主义服务的根本方向</p>
+</li>
+<li>
+<p>新时代文化使命：推动文化繁荣、建设文化强国、建设现代文明</p>
+</li>
+<li>
+<p>文艺和文艺工作的出发点和落脚点：满足人民精神文化需要</p>
+</li>
+<li>
+<p>文艺工作者的职责：弘扬中国精神、传播中国价值、凝聚中国力量</p>
 </li>
 <li>
 <p>新闻舆论工作的关键：管好用好互联网</p>
@@ -1435,6 +1619,12 @@
 </ul>
 <h3 id="国家安全">国家安全 </h3>
 <ul>
+<li>
+<p>民族复兴的根基：国家安全</p>
+</li>
+<li>
+<p>国家强盛的前提：社会稳定</p>
+</li>
 <li>
 <p>中心、宗旨：人民安全</p>
 </li>
@@ -1532,6 +1722,9 @@
 <p>宗旨：维护世界和平、促进共同发展</p>
 </li>
 <li>
+<p>原则：和平发展</p>
+</li>
+<li>
 <p>新型国际关系的新：合作共赢</p>
 </li>
 <li>
@@ -1590,7 +1783,7 @@
 <p>目标：自强，求富</p>
 </li>
 <li>
-<p>首要目的：镇压太平天国起义，加强边防和发展</p>
+<p>首要目的：镇压太平天国起义，加强边防和发展(没有实质上做到)</p>
 </li>
 <li>
 <p>根本目的：维护封建统治</p>
@@ -1656,6 +1849,9 @@
 <p>严复：《天演论》，物竞天择适者生存</p>
 </li>
 <li>
+<p>上述人物的思想共同点：反侵略、独立富强爱国思想、一定程度反封建民主思想</p>
+</li>
+<li>
 <p>孙中山：振兴中华</p>
 </li>
 </ul>
@@ -1663,6 +1859,9 @@
 <ul>
 <li>
 <p>近代以来中国发生的深刻社会变革由此拉开序幕</p>
+</li>
+<li>
+<p>第一个革命团体：兴中会</p>
 </li>
 <li>
 <p>中国第一个领导的资产阶级革命政党：同盟会</p>
@@ -1692,7 +1891,7 @@
 <h3 id="新文化运动">新文化运动 </h3>
 <ul>
 <li>
-<p>宣传资本主义，个人解放</p>
+<p>宣传资本 主义，个人解放</p>
 </li>
 <li>
 <p>为马克思主义传播准备思想条件</p>
@@ -1723,6 +1922,12 @@
 </li>
 <li>
 <p>五四精神的核心：爱国主义精神</p>
+</li>
+<li>
+<p>李大钊《我的马克思主义观》：标志着马克思主义系统传播</p>
+</li>
+<li>
+<p>五川运动：掀起了全国范围的大革命高潮</p>
 </li>
 </ul>
 <h3 id="中国共产党-1">中国共产党 </h3>
@@ -1758,7 +1963,7 @@
 <p>武装夺取政权第一枪：南昌起义</p>
 </li>
 <li>
-<p>井冈山革命根据地：秋收起义</p>
+<p>井冈山革命根据地：秋收起义(首举工农革命军旗帜)</p>
 </li>
 <li>
 <p>反国民党屠杀政策：广州起义</p>
@@ -1815,6 +2020,9 @@
 <p>号召：自己动手，丰衣足食</p>
 </li>
 <li>
+<p>抗日根据地的首要的、根本的任务：政权建设</p>
+</li>
+<li>
 <p>打破日军不可战胜的：平型关大捷</p>
 </li>
 <li>
@@ -1854,13 +2062,16 @@
 <p>学风问题的第一个重要问题：思想方法问题，思想态度问题，工作态度问题</p>
 </li>
 <li>
-<p>标志着政整风运动的结束：《关于若干历史问题的决议》</p>
+<p>标志着政整风运动的结束：六届七中的《关于若干历史问题的决议》</p>
 </li>
 </ul>
 <h3 id="解放战争">解放战争 </h3>
 <ul>
 <li>
 <p>口号：和平、民主、团结</p>
+</li>
+<li>
+<p>解放区中心工作：练兵、减租与生产</p>
 </li>
 <li>
 <p>三大战役：辽沈、淮海、平津</p>
@@ -1887,6 +2098,9 @@
 <p>自愿接受中国共产党的领导：《对时局的意见》</p>
 </li>
 <li>
+<p>毛泽东提出各民主党派应积极参政，共同建设新中国体现：民主党派地位的根本变化</p>
+</li>
+<li>
 <p>新中国奠基三个历史性文件：《中国人民政治协商会议组织法》《中华人民共和国中央人民政府组织法》《中国人民政治协商会议共同纲领》</p>
 </li>
 <li>
@@ -1901,6 +2115,9 @@
 <li>
 <p>历次土改规模最大最好的一次，保存富农经济：《中华人民共和国土地改革法》</p>
 </li>
+<li>
+<p>抗美援朝：站起来后屹立东方的宣言书、走向伟大复兴的重要里程碑</p>
+</li>
 </ul>
 <h2 id="思修">思修 </h2>
 <ul>
@@ -1914,10 +2131,55 @@
 <p>社会理想是个人理想的凝练和升华，不是简单叠加</p>
 </li>
 <li>
-<p>社会主义核心价值观的特征：先进性、人民性、真实性</p>
+<p>社会主义核心价值观的特征：先进性、人民性(根本特性)、真实性</p>
+</li>
+<li>
+<p>先进性集中体现：社会主义所坚持和追求的价值理念</p>
 </li>
 <li>
 <p>理想特征：超越性、实践性、时代性</p>
+</li>
+<li>
+<p>信念：执着性</p>
+</li>
+</ul>
+<h2 id="23时政">23时政 </h2>
+<ul>
+<li>
+<p>进口博览会——主题：新时代，共享未来</p>
+</li>
+<li>
+<p>进口博览会——高水平自贸试验区核心：制度建设</p>
+</li>
+<li>
+<p>习近平黑龙江讲话——方向：产业升级</p>
+</li>
+<li>
+<p>习近平黑龙江讲话——根基：实体经济</p>
+</li>
+<li>
+<p>习近平黑龙江讲话——主攻方向：现代化大农业</p>
+</li>
+<li>
+<p>习近平黑龙江讲话——首要担当：粮食稳产保供"压舱石"</p>
+</li>
+<li>
+<p>第三届一带一路高峰论坛——主题：高质量共建一带一路，携手实现共同发展</p>
+</li>
+<li>
+<p>推广枫桥经验60周年——治理基石、基本单元、基层、最后一公里：城乡社区</p>
+</li>
+<li>
+<p>二十大精神研讨班——现代化最显著特征：人口规模巨大的现代化，体现难度</p>
+</li>
+<li>
+<p>二十大精神研讨班——现代化最显著标志：人民共同富裕的现代化，本质特征</p>
+</li>
+<li>
+<p>中央金融工作会议——永恒主题：防控风险</p>
+</li>
+<li>
+<p>旧金山峰会——中美应有底色：合作共赢</p>
 </li>
 </ul>
 
